# multi-chatting

./: .gitignore  App.cpp  App.h  CMakeLists.txt  CThread.cpp  CThread.h  CThreadException.h  ChatException.cpp  ChatException.h  Database.cpp  Database.h  README.md  Server.cpp  Server.h  User.cpp  User.h  UserManager.h
Client/: .gitignore
Client/app/: build.gradle  proguard-rules.pro
Client/app/src/androidTest/java/com/example/joju/client/: ApplicationTest.java
Client/app/src/main/: AndroidManifest.xml
Client/app/src/main/java/com/example/joju/client/: ChatArrayAdapter.java  ChatMessage.java  ChattingActivity.java  MainActivity.java  SigninActivity.java  TCPThread.java  UserListActivity.java  UserListAdapter.java  UserProfile.java
Client/app/src/main/res/drawable/: textview_left.xml  textview_right.xml
Client/app/src/main/res/layout/: activity_chatting.xml  activity_main.xml  activity_signin.xml  activity_users.xml  left.xml  right.xml  userprofile.xml
Client/app/src/main/res/values/: strings.xml
Client/app/src/test/java/com/example/joju/client/: ExampleUnitTest.java
Server/: .gitignore  App.cpp  App.h  CMakeCache.txt  CMakeLists.txt  CThread.cpp  ChatException.h  Database.cpp  Database.h  Makefile  Server.cpp  Server.h  User.cpp  User.h  UserManager.cpp  UserManager.h  cmake_install.cmake  main.cpp  multichatting  multichatting.cbp
